# private-lending-protocol

./: .gitignore  Cargo.toml  README.md  lib.rs  package.json  pnpm-lock.yaml
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: test_basics.rs
frontend/src/app/: page.tsx
frontend/src/app/api/lender-balance/: route.ts
frontend/src/app/api/pool-balance/: route.ts
frontend/src/app/api/sorce/: route.ts
frontend/src/app/api/view-loan/: route.ts
frontend/src/config/: index.ts
frontend/src/utils/: constants.ts
src/: lib.rs
src/app/: layout.tsx  page.tsx
src/app/api/activity-history/: route.ts
src/app/api/calculate-credit/: route.ts
src/app/api/check-status/: route.ts
src/app/api/credit-score/: route.ts
src/app/api/get-staking-reward/: route.ts
src/app/api/loan-status/: route.ts
src/app/api/pool-balance/: route.ts
src/app/api/quote/: route.ts
src/app/api/sorce/: route.ts
src/app/api/swap/: route.ts
src/app/staking/: page.tsx
src/components/: Header.tsx  Layout.tsx  LoginButton.tsx  Providers.tsx
src/lib/: api.ts  near-method.ts
src/utils/: constants.ts  index.ts
tests/: test_basics.rs
